Fix style for fullscreen

--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <style> 
+    /*https://stackoverflow.com/a/38270758/1188090*/
+    video, iframe {
+     width: 100vw;
+     height: calc(100vw/1.77777778);
+    }
+    body {
+      padding: 0;
+      margin: 0;
+      overflow: hidden;
+    }
+  </style>
   <script>
     // shamelessly borrowed from: https://stackoverflow.com/a/42281973/1188090
     // https://developers.google.com/youtube/iframe_api_reference
@@ -48,8 +60,6 @@
     function getInitialConfigs(options) {
       console.log('getting configs!', options)
       return {
-        height: '100%',
-        width: '100%',
         videoId: 'hr1plibwDPA',
         playerVars: {
           controls: 0, // Show pause/play buttons in player
